# vpnx

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
lib/: __init__.py
lib/application/: __init__.py  commands.py  handlers.py
lib/domain/: __init__.py  entities.py  services.py  value_objects.py
lib/infrastructure/: __init__.py  app_config.py  config_parser.py  log_reader.py  management.py  password_store.py  process.py  vpn_process.py  vpn_repository.py  xdg.py
lib/presentation/: __init__.py  cli.py  terminal.py  tui.py
tests/: test_application.py  test_config.py  test_domain.py  test_infrastructure.py  test_management.py  test_presentation.py
vpnx/: __main__.py  main.py
vpnx/application/: __init__.py  commands.py  handlers.py
vpnx/domain/: __init__.py  entities.py  services.py  value_objects.py
vpnx/infrastructure/: __init__.py  app_config.py  password_store.py  port_allocator.py  process.py  vpn_process.py  vpn_repository.py
vpnx/presentation/: __init__.py  cli.py  console.py  terminal.py  tui.py
